# inteligencia-computacional

./: CMakeLists.txt  README.md  automatization.py  visualize.py
apps/: main.cpp  main_automatic.cpp
include/: File_io.h  Node.h  OPHS.h  file_io.h  gdsa_vector.h  genetic.h  greedy.h  greedy_v2.h  local_search.h  simulated_annealing.h  trip.h  util.h
instances/OPHS_instances_February 2013/: test_instance.ophs
out_c_sa/: metrics_construtivo_sa.csv
out_c_sa/SET1 1-2/: 100-35-1-2.ophsoutGA  64-45-1-2.ophsoutGA  64-45-1-2.ophsoutSA
out_c_sa/SET1 2-3/: 102-60-2-3.ophsoutSA  66-125-2-3.ophsoutGA  66-125-2-3.ophsoutSA
out_c_sa/SET1 3-4/: 100-40-3-4.ophsoutGA  64-70-3-4.ophsoutSA
out_c_sa/SET2 5-3/: 66-60-5-3.ophsoutSA
out_c_sa/SET2 6-4/: 100-35-6-4.ophsoutGA  66-50-6-4.ophsoutGA  66-50-6-4.ophsoutSA
out_c_sa/SET3 10-4/: 100-200-10-4.ophsoutGA  100-200-10-4.ophsoutSA  66-125-10-4.ophsoutSA
out_c_sa/SET3 12-5/: 100-180-12-5.ophsoutSA  64-75-12-5.ophsoutGA  64-75-12-5.ophsoutSA
out_c_sa/SET4/: 100-20-3-3.ophsoutSA  100-25-3-3.ophsoutSA  102-35-3-3.ophsoutSA  102-40-3-3.ophsoutSA  102-45-3-3.ophsoutSA
out_g_sa/: metrics_construtivo_genetico_sa.csv
out_g_sa/SET1 1-2/: 64-45-1-2.ophsoutGA  64-45-1-2.ophsoutSA
out_g_sa/SET1 2-3/: 102-60-2-3.ophsoutGA  102-60-2-3.ophsoutSA  66-125-2-3.ophsoutGA  66-125-2-3.ophsoutSA
out_g_sa/SET1 3-4/: 64-70-3-4.ophsoutGA  64-70-3-4.ophsoutSA
out_g_sa/SET2 5-3/: 100-45-5-3.ophsoutGA  66-60-5-3.ophsoutGA  66-60-5-3.ophsoutSA
out_g_sa/SET2 6-4/: 66-50-6-4.ophsoutGA  66-50-6-4.ophsoutSA
src/: gdsa_vector.cpp
(+17 files in other folders)
